Fixed dark mode switch

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Multimodal Composition</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="Adam's project for the College Writing 101 Final. A basic website blog post about whether or not piracy is justified." />
-  <link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="stylesheet" type="text/css" href="styles.css" />
   <link rel="icon" href="nope2.gif">
   <meta name="theme-color" content="#367510
 ">
@@ -16,6 +16,7 @@
     <a href="#menu-item-1">Menu Item 1</a>
     <a href="#menu-item-2">Menu Item 2</a>
     <a href="#menu-item-3">Menu Item 3</a>
+    <div class="container">
     <div class="toggle-container" id="themeToggle">
 		<script src="script.js"></script><svg class="sun-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 		<circle cx="12" cy="12" r="5"></circle>
@@ -31,7 +32,7 @@
             <svg class="moon-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
             </svg>
-	</div>
+	</div></div>
     
     <a href="javascript:void(0);" id="menu-toggle" onclick="togglemenu()">
       <div class="menu-toggle__bar1"></div>
