--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
 </head>
 <body>
   <nav class="nav" id="nav">
-    <a href="#home">Logo</a>
-    <a href="#menu-item-1">Menu Item 1</a>
-    <a href="#menu-item-2">Menu Item 2</a>
-    <a href="#menu-item-3">Menu Item 3</a>
+    <a href="#home">Top</a>
+    <a href="#menu-item-1">What is Piracy?</a>
+    <a href="#menu-item-2">The Bad</a>
+    <a href="#menu-item-3">The good</a>
+    <a href="#menu-item-4">The solution</a>
+    <a href="#menu-item-5">Conclusion</a>
     <div class="container">
     <div class="toggle-container" id="themeToggle">
+      <p>Dark mode toggle</p>
 		<script src="script.js"></script><svg class="sun-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 		<circle cx="12" cy="12" r="5"></circle>
                 <line x1="12" y1="1" x2="12" y2="3"></line>
@@ -50,12 +53,10 @@
     Companies try to push their rights, and people resort to piracy. 
     In this blog, we will explore the various reasons many people cite for and against piracy. 
   </p>
-  <img src="https://via.placeholder.com/800
-x600
-/" alt="">
 
-<div name="Intro_section"> 
+<div name="menu-item-1"> 
 <h2>What is digital piracy?</h2>
+<aside><img src="sea_pirates.jpg"></aside>
 <p>Piracy, as defined by (this organization) is:
     <blockquote>Digital piracy refers to the unauthorized access or
     dissemination of licensed digital content and products.</blockquote> 
@@ -64,15 +65,15 @@ x600
     Pirates, back in the day, used intimidation and physical force, along with other unethical 
 </p>
 </div>
-<aside><img src="sea_pirates.jpg"></aside>
 
-  <div id="solutions">
+
+  <div id="menu-item-4">
     <h2>Solutions</h2>
       <p>What could modern companies do to minimize the damage caused by piracy?</p>
       <p>Currently, they are employing various restrictions and practices designed to hurt piracy:</p>
       <li>Digital Rights Management (DRM)</li>
   </div>
-  <div id="conclusion">
+  <div id="menu-item-5">
     <h2>Conclusion</h2>
     <p>In conclusion, there are many reasons ways that piracy affects various people. 
         While it still does prevent creators and studios from making maximum profit, it could still be used as a tool to gain popularity with those currently unable to support the project. And, the more companies fight back against piracy, the stronger its appeal becomes.</p>
@@ -80,7 +81,14 @@ x600
     <br>Instead of companies fighting back through DRM and other restrictions, companies could work to make their services more streamlined, making it simpler to enjoy the content on their platforms than a simple download. 
     Instead of being stingy with every single penny they could possibly make for their shareholders, it would be beneficial if they focused on keeping honest business ethics and delivering more than expected to the customer. And, for consumers: We should vote with our money and time <small>(and the lack thereof)</small> to show companies what we truly value. 
     </div>
+<div id="reflection">
+  <h2>Project Reflection</h2>
+  <p>
+     Looking back on the project, it was interesting to look at what various people have to say about piracy. It is certainly a complex and murky topic, and I hope I did justice to how important it is to some. 
+    To be quite honest, being on the internet feels bad, whether it is putting through what companies try to do to take away people's rights, or the moral dullness of pirating online content. I personally felt there needed to be a change, and through this I was better able to articulate it.
+    </p>
 
+</div>
   <footer>
     <small>© <script>document.write(new Date().getFullYear())</script> Name Here. Some Rights Reserved.</small>
   </footer>
