--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 </div>
   <footer>
-    <small>© <script>document.write(new Date().getFullYear())</script> Name Here. Some Rights Reserved.</small>
+    <small>© <script>document.write(new Date().getFullYear())</script> Open under MIT License.</small>
   </footer>
   <!-- ░░░░░▄▄▄▄▀▀▀▀▀▀▀▀▄▄▄▄▄▄░░░░░░░░ -->
   <!-- ░░░░░█░░░░▒▒▒▒▒▒▒▒▒▒▒▒░░▀▀▄░░░░ -->
