More piracy definitions

--- a/index.html
+++ b/index.html
@@ -43,11 +43,7 @@
       <div class="menu-toggle__bar3"></div>
     </a>
   </nav>
-  <style>
 
-  /* For best practice, move CSS below to an external CSS file. */
-
-  </style>
   <h1>Name Here -  Is Piracy Justified?</h1>
   <p>In the digital age, the world has become increasingly lawless. 
     Companies try to push their rights, and people resort to piracy. 
@@ -56,14 +52,25 @@
 
 <div name="menu-item-1"> 
 <h2>What is digital piracy?</h2>
-<aside><img src="sea_pirates.jpg"></aside>
-<p>Piracy, as defined by (this organization) is:
+<aside><img id="pirate_pic" src="sea_pirates.jpg"></aside>
+<p>Piracy, as defined by this study is:
     <blockquote>Digital piracy refers to the unauthorized access or
     dissemination of licensed digital content and products.</blockquote> 
     While piracy <em>is</em> often associated with what ancient pirate skullywags did 
     (it's almost in the name), it is fundamentally different. <br>
-    Pirates, back in the day, used intimidation and physical force, along with other unethical 
-</p>
+    Pirates, back in the day, used intimidation and physical force, and invasion of personal property to gain booty they otherwise couldn't have legally. Since physical goods <small>(such as gold)</small> are limited resources (energy cannot be created or destroyed), this means that you hurt another person by <b>taking something they once owned away from them.</b>
+    
+  </p>
+  <p>Digital piracy, on the other hand, is a bit different, and there are generally two different camps, although they both share one commonality: <b>you don't take away a physical good.</b></p>
+  <p>One camp of piracy is akin to plagiarism (taking something and claiming it's yours). In this circumstance, the pirate makes profit through other actions such as plaigarism. Here, the act of piracy technically doesn't <b>take away</b> anything from the original author; the act of plaigarism is what takes away profits and recognition. Howeevr, piracy with this intention in mind certainly hurts the publishers and the author.</p>
+  <p>On the other hand, we have all other piracy for personal reasons. The pirate does <b>not</b> make any money from pirating content, and as a result, the original author of the content doesn't experience any direct losses. However, they may experience <b>indirect losses</b> that could come from the monetary licensing of the digital product.</p>
+</div>
+<div id="piracy_bad">
+  <h2>Why should we stop piracy, how does it harm people?</h2>
+  <p>As mentioned before, piracy </p>
+
+
+
 </div>
 
 
@@ -72,6 +79,11 @@
       <p>What could modern companies do to minimize the damage caused by piracy?</p>
       <p>Currently, they are employing various restrictions and practices designed to hurt piracy:</p>
       <li>Digital Rights Management (DRM)</li>
+      DRM 
+      <li>Rate Limiting / Paywalling / Price Hike</li>
+      This is 
+      <li>Know Your Customer (KYC) / fingerprinting</li>
+
   </div>
   <div id="menu-item-5">
     <h2>Conclusion</h2>
@@ -89,8 +101,17 @@
     </p>
 
 </div>
+<div id="citation">
+  <h2>Works Cited</h2>
+<cite><a href="#pirate_pic">Pirates picure</a>, public domain courtesy of wallpaperflare.com. <a href="https://www.wallpaperflare.com/pirates-skull-and-bones-ubisoft-video-games-wallpaper-czgjx">https://www.wallpaperflare.com/pirates-skull-and-bones-ubisoft-video-games-wallpaper-czgjx</a>. Last Accessed May 2025.</cite>
+<cite></cite>
+
+
+
+</div>
   <footer>
-    <small>© <script>document.write(new Date().getFullYear())</script> Open under MIT License.</small>
+    <br><br><br><br><br>
+    <small>© <script>document.write(new Date().getFullYear())</script> All outside sources (quotes, images, video) are copyrighted under their respective licenses.</small>
   </footer>
   <!-- ░░░░░▄▄▄▄▀▀▀▀▀▀▀▀▄▄▄▄▄▄░░░░░░░░ -->
   <!-- ░░░░░█░░░░▒▒▒▒▒▒▒▒▒▒▒▒░░▀▀▄░░░░ -->
