--- a/index.html
+++ b/index.html
@@ -61,18 +61,18 @@
     Pirates, back in the day, used intimidation and physical force, and invasion of personal property to gain booty they otherwise couldn't have legally. Since physical goods <small>(such as gold)</small> are limited resources (energy cannot be created or destroyed), this means that you hurt another person by <b>taking something they once owned away from them.</b>
     
   </p>
-  <p>Digital piracy, on the other hand, is a bit different, and there are generally two different camps, although they both share one commonality: <b>you don't take away a physical good.</b></p>
-  <p>One camp of piracy is akin to plagiarism (taking something and claiming it's yours). In this circumstance, the pirate makes profit through other actions such as plaigarism. Here, the act of piracy technically doesn't <b>take away</b> anything from the original author; the act of plaigarism is what takes away profits and recognition. Howeevr, piracy with this intention in mind certainly hurts the publishers and the author.</p>
-  <p>On the other hand, we have all other piracy for personal reasons. The pirate does <b>not</b> make any money from pirating content, and as a result, the original author of the content doesn't experience any direct losses. However, they may experience <b>indirect losses</b> that could come from the monetary licensing of the digital product.</p>
+  <p>Digital piracy, on the other hand, is a bit different, and there are generally two different camps, although they both share one commonality: <b>you don't take away a physical good.</b><br>One camp of piracy is akin to plagiarism (taking something and claiming it's yours). In this circumstance, the pirate makes profit through other actions such as plaigarism. Here, the act of piracy technically doesn't <b>take away</b> anything from the original author; the act of plaigarism is what takes away profits and recognition. Howeevr, piracy with this intention in mind certainly hurts the publishers and the author.<br>On the other hand, we have all other piracy for personal reasons. The pirate does <b>not</b> make any money from pirating content, and as a result, the original author of the content doesn't experience any direct losses. However, they may experience <b>indirect losses</b> that could come from the monetary licensing of the digital product.</p>
 </div>
 <div id="piracy_bad">
   <h2>Why should we stop piracy, how does it harm people?</h2>
-  <p>As mentioned before, piracy </p>
-
-
+  <p>As mentioned before, piracy can limit a publisher's - and by proxy, authors - income, especially if it is used by others to make profit off of their stolen product, or on a large scale of rrefusal to buy. While never the sole reason for a company's bankruptcy, it certainly does make every mitsake a closer threat to the unfortunate end.</p>
 
 </div>
+<div id="piracy_good">
+<h2>Why Piracy may not be as bad as it may seem</h2>
+<p></p>
 
+</div>
 
   <div id="menu-item-4">
     <h2>Solutions</h2>
@@ -104,8 +104,13 @@
 <div id="citation">
   <h2>Works Cited</h2>
 <cite><a href="#pirate_pic">Pirates picure</a>, public domain courtesy of wallpaperflare.com. <a href="https://www.wallpaperflare.com/pirates-skull-and-bones-ubisoft-video-games-wallpaper-czgjx">https://www.wallpaperflare.com/pirates-skull-and-bones-ubisoft-video-games-wallpaper-czgjx</a>. Last Accessed May 2025.</cite>
-<cite></cite>
-
+<br>
+<cite>D. Johnson, “What is piracy? Here’s what you need to know about digital piracy, and how to avoid stolen digital content,” Business Insider, Aug. 23, 2022. <a href="https://www.businessinsider.com/guides/tech/what-is-piracy">https://www.businessinsider.com/guides/tech/what-is-piracy</a></cite>
+<br>
+<cite>Christian Peukert, Jörg Claussen, Tobias Kretschmer, <i>Piracy and box office movie revenues: Evidence from Megaupload</i>, International Journal of Industrial Organization,
+Volume 52, 2017, Pages 188-215, ISSN 0167-7187. <a href="https://doi.org/10.1016/j.ijindorg.2016.12.006">https://doi.org/10.1016/j.ijindorg.2016.12.006</a>.</cite>
+<br><cite>M. D. Smith, “Responding to Piracy: What the evidence shows - Publications - The Technology Policy Institute,” The Technology Policy Institute, Apr. 20, 2021. <a href="https://techpolicyinstitute.org/publications/intellectual-property/copyright-and-piracy/responding-to-piracy-what-the-evidence-shows/">https://techpolicyinstitute.org/publications/intellectual-property/copyright-and-piracy/responding-to-piracy-what-the-evidence-shows/</a></cite>
+<br><cite>C. Doctorow, “‘If buying isn’t owning, piracy isn’t stealing’ - Cory Doctorow - Medium,” Medium, Dec. 09, 2023. [Online]. Available: <a href="https://doctorow.medium.com/https-pluralistic-net-2023-12-08-playstationed-tyler-james-hill-2ba28bfdbefc">https://doctorow.medium.com/https-pluralistic-net-2023-12-08-playstationed-tyler-james-hill-2ba28bfdbefc</a></cite>
 
 
 </div>
