--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <nav class="nav" id="nav">
     <a href="#home">Top</a>
     <a href="#menu-item-1">What is Piracy?</a>
-    <a href="#menu-item-2">The Bad</a>
-    <a href="#menu-item-3">The good</a>
+    <a href="#piracy_bad">The Bad</a>
+    <a href="#piracy_good">The good</a>
     <a href="#menu-item-4">The solution</a>
     <a href="#menu-item-5">Conclusion</a>
     <div class="container">
