--- a/index.html
+++ b/index.html
@@ -50,39 +50,42 @@
     In this blog, we will explore the various reasons many people cite for and against piracy. 
   </p>
 
-<div name="menu-item-1"> 
-<h2>What is digital piracy?</h2>
-<aside><img id="pirate_pic" src="sea_pirates.jpg"></aside>
-<p>Piracy, as defined by this study is:
-    <blockquote>Digital piracy refers to the unauthorized access or
-    dissemination of licensed digital content and products.</blockquote> 
-    While piracy <em>is</em> often associated with what ancient pirate skullywags did 
-    (it's almost in the name), it is fundamentally different. <br>
-    Pirates, back in the day, used intimidation and physical force, and invasion of personal property to gain booty they otherwise couldn't have legally. Since physical goods <small>(such as gold)</small> are limited resources (energy cannot be created or destroyed), this means that you hurt another person by <b>taking something they once owned away from them.</b>
-    
-  </p>
-  <p>Digital piracy, on the other hand, is a bit different, and there are generally two different camps, although they both share one commonality: <b>you don't take away a physical good.</b><br>One camp of piracy is akin to plagiarism (taking something and claiming it's yours). In this circumstance, the pirate makes profit through other actions such as plaigarism. Here, the act of piracy technically doesn't <b>take away</b> anything from the original author; the act of plaigarism is what takes away profits and recognition. Howeevr, piracy with this intention in mind certainly hurts the publishers and the author.<br>On the other hand, we have all other piracy for personal reasons. The pirate does <b>not</b> make any money from pirating content, and as a result, the original author of the content doesn't experience any direct losses. However, they may experience <b>indirect losses</b> that could come from the monetary licensing of the digital product.</p>
-</div>
-<div id="piracy_bad">
-  <h2>Why should we stop piracy, how does it harm people?</h2>
-  <p>As mentioned before, piracy can limit a publisher's - and by proxy, authors - income, especially if it is used by others to make profit off of their stolen product, or on a large scale of rrefusal to buy. While never the sole reason for a company's bankruptcy, it certainly does make every mitsake a closer threat to the unfortunate end.</p>
+  <div name="menu-item-1"> 
+  <h2>What is digital piracy?</h2>
+  <aside><img id="pirate_pic" src="sea_pirates.jpg"></aside>
+  <p>Piracy, as defined by this study is:
+      <blockquote>Digital piracy refers to the unauthorized access or
+      dissemination of licensed digital content and products.</blockquote> 
+      While piracy <em>is</em> often associated with what ancient pirate skullywags did 
+      (it's almost in the name), it is fundamentally different. <br>
+      Pirates, back in the day, used intimidation and physical force, and invasion of personal property to gain booty they otherwise couldn't have legally. Since physical goods <small>(such as gold)</small> are limited resources (energy cannot be created or destroyed), this means that you hurt another person by <b>taking something they once owned away from them.</b>
+      
+    </p>
+    <p>Digital piracy, on the other hand, is a bit different, and there are generally two different camps, although they both share one commonality: <b>you don't take away a physical good.</b><br>One camp of piracy is akin to plagiarism (taking something and claiming it's yours). In this circumstance, the pirate makes profit through other actions such as plaigarism. Here, the act of piracy technically doesn't <b>take away</b> anything from the original author; the act of plaigarism is what takes away profits and recognition. Howeevr, piracy with this intention in mind certainly hurts the publishers and the author.<br>On the other hand, we have all other piracy for personal reasons. The pirate does <b>not</b> make any money from pirating content, and as a result, the original author of the content doesn't experience any direct losses. However, they may experience <b>indirect losses</b> that could come from the monetary licensing of the digital product.</p>
+  </div>
+  <div id="piracy_bad">
+    <h2>Why should we stop piracy, how does it harm people?</h2>
+    <p>As mentioned before, piracy can limit a publisher's - and by proxy, authors - income, especially if it is used by others to make profit off of their stolen product, or on a large scale of rrefusal to buy. While never the sole reason for a company's bankruptcy, it certainly does make every mitsake a closer threat to the unfortunate end.</p>
 
-</div>
-<div id="piracy_good">
-<h2>Why Piracy may not be as bad as it may seem</h2>
-<p></p>
+  </div>
+  <div id="piracy_good">
+  <h2>Why Piracy may not be as bad as it may seem</h2>
+  <p>While Piracy does have its severe downsides, it still can do good for people. </p>
 
-</div>
+  </div>
 
   <div id="menu-item-4">
     <h2>Solutions</h2>
       <p>What could modern companies do to minimize the damage caused by piracy?</p>
       <p>Currently, they are employing various restrictions and practices designed to hurt piracy:</p>
-      <li>Digital Rights Management (DRM)</li>
-      DRM 
-      <li>Rate Limiting / Paywalling / Price Hike</li>
-      This is 
-      <li>Know Your Customer (KYC) / fingerprinting</li>
+      <dl>
+      <dt>Digital Rights Management (<a href="https://consumerrights.wiki/Digital_rights_management">DRM</a>)</dt>
+      <dd>DRM is when software, or any other digital product, has certain features that make it harder for the purchaser to share. While it does make it harder for pirates, it mostly hurts paying customers, who are now inconvenienced by this software. The pirates know they can go to another source to get a better experience, without being shackled by DRM.</dd>
+      <br><dt>Rate Limiting / Paywalling / Price Hike</dt>
+      <dd>Companies use various tactics to walk back on their services. By limiting what they can offer, they can better secure their copyright, however the public may not respond well to losing their services. </dd>
+      <br><dt>Know Your Customer (KYC) / fingerprinting</dt>
+      <dd>This is where companies look at user behavior, and target suspicious users. An example of this is Netflix tracking your IP address when you sign in. If they see a login from a suspicious IP, they may block it, possibly preventing you from sharing a password with a friend.</dd>
+    </dl>
 
   </div>
   <div id="menu-item-5">
@@ -93,27 +96,27 @@
     <br>Instead of companies fighting back through DRM and other restrictions, companies could work to make their services more streamlined, making it simpler to enjoy the content on their platforms than a simple download. 
     Instead of being stingy with every single penny they could possibly make for their shareholders, it would be beneficial if they focused on keeping honest business ethics and delivering more than expected to the customer. And, for consumers: We should vote with our money and time <small>(and the lack thereof)</small> to show companies what we truly value. 
     </div>
-<div id="reflection">
-  <h2>Project Reflection</h2>
-  <p>
-     Looking back on the project, it was interesting to look at what various people have to say about piracy. It is certainly a complex and murky topic, and I hope I did justice to how important it is to some. 
-    To be quite honest, being on the internet feels bad, whether it is putting through what companies try to do to take away people's rights, or the moral dullness of pirating online content. I personally felt there needed to be a change, and through this I was better able to articulate it.
-    </p>
+  <div id="reflection">
+    <h2>Project Reflection</h2>
+    <p>
+      Looking back on the project, it was interesting to look at what various people have to say about piracy. It is certainly a complex and murky topic, and I hope I did justice to how important it is to some. 
+      To be quite honest, being on the internet feels bad, whether it is putting through what companies try to do to take away people's rights, or the moral dullness of pirating online content. I personally felt there needed to be a change, and through this I was better able to articulate it.
+      </p>
 
-</div>
-<div id="citation">
-  <h2>Works Cited</h2>
-<cite><a href="#pirate_pic">Pirates picure</a>, public domain courtesy of wallpaperflare.com. <a href="https://www.wallpaperflare.com/pirates-skull-and-bones-ubisoft-video-games-wallpaper-czgjx">https://www.wallpaperflare.com/pirates-skull-and-bones-ubisoft-video-games-wallpaper-czgjx</a>. Last Accessed May 2025.</cite>
-<br>
-<cite>D. Johnson, “What is piracy? Here’s what you need to know about digital piracy, and how to avoid stolen digital content,” Business Insider, Aug. 23, 2022. <a href="https://www.businessinsider.com/guides/tech/what-is-piracy">https://www.businessinsider.com/guides/tech/what-is-piracy</a></cite>
-<br>
-<cite>Christian Peukert, Jörg Claussen, Tobias Kretschmer, <i>Piracy and box office movie revenues: Evidence from Megaupload</i>, International Journal of Industrial Organization,
-Volume 52, 2017, Pages 188-215, ISSN 0167-7187. <a href="https://doi.org/10.1016/j.ijindorg.2016.12.006">https://doi.org/10.1016/j.ijindorg.2016.12.006</a>.</cite>
-<br><cite>M. D. Smith, “Responding to Piracy: What the evidence shows - Publications - The Technology Policy Institute,” The Technology Policy Institute, Apr. 20, 2021. <a href="https://techpolicyinstitute.org/publications/intellectual-property/copyright-and-piracy/responding-to-piracy-what-the-evidence-shows/">https://techpolicyinstitute.org/publications/intellectual-property/copyright-and-piracy/responding-to-piracy-what-the-evidence-shows/</a></cite>
-<br><cite>C. Doctorow, “‘If buying isn’t owning, piracy isn’t stealing’ - Cory Doctorow - Medium,” Medium, Dec. 09, 2023. [Online]. Available: <a href="https://doctorow.medium.com/https-pluralistic-net-2023-12-08-playstationed-tyler-james-hill-2ba28bfdbefc">https://doctorow.medium.com/https-pluralistic-net-2023-12-08-playstationed-tyler-james-hill-2ba28bfdbefc</a></cite>
+  </div>
+  <div id="citation">
+    <h2>Works Cited</h2>
+  <cite><a href="#pirate_pic">Pirates picure</a>, public domain courtesy of wallpaperflare.com. <a href="https://www.wallpaperflare.com/pirates-skull-and-bones-ubisoft-video-games-wallpaper-czgjx">https://www.wallpaperflare.com/pirates-skull-and-bones-ubisoft-video-games-wallpaper-czgjx</a>. Last Accessed May 2025.</cite>
+  <br>
+  <cite>D. Johnson, “What is piracy? Here’s what you need to know about digital piracy, and how to avoid stolen digital content,” Business Insider, Aug. 23, 2022. <a href="https://www.businessinsider.com/guides/tech/what-is-piracy">https://www.businessinsider.com/guides/tech/what-is-piracy</a></cite>
+  <br>
+  <cite>Christian Peukert, Jörg Claussen, Tobias Kretschmer, <i>Piracy and box office movie revenues: Evidence from Megaupload</i>, International Journal of Industrial Organization,
+  Volume 52, 2017, Pages 188-215, ISSN 0167-7187. <a href="https://doi.org/10.1016/j.ijindorg.2016.12.006">https://doi.org/10.1016/j.ijindorg.2016.12.006</a>.</cite>
+  <br><cite>M. D. Smith, “Responding to Piracy: What the evidence shows - Publications - The Technology Policy Institute,” The Technology Policy Institute, Apr. 20, 2021. <a href="https://techpolicyinstitute.org/publications/intellectual-property/copyright-and-piracy/responding-to-piracy-what-the-evidence-shows/">https://techpolicyinstitute.org/publications/intellectual-property/copyright-and-piracy/responding-to-piracy-what-the-evidence-shows/</a></cite>
+  <br><cite>C. Doctorow, “‘If buying isn’t owning, piracy isn’t stealing’ - Cory Doctorow - Medium,” Medium, Dec. 09, 2023. [Online]. Available: <a href="https://doctorow.medium.com/https-pluralistic-net-2023-12-08-playstationed-tyler-james-hill-2ba28bfdbefc">https://doctorow.medium.com/https-pluralistic-net-2023-12-08-playstationed-tyler-james-hill-2ba28bfdbefc</a></cite>
 
 
-</div>
+  </div>
   <footer>
     <br><br><br><br><br>
     <small>© <script>document.write(new Date().getFullYear())</script> All outside sources (quotes, images, video) are copyrighted under their respective licenses.</small>
