reasons for piracy

--- a/index.html
+++ b/index.html
@@ -70,8 +70,16 @@
   </div>
   <div id="piracy_good">
   <h2>Why Piracy may not be as bad as it may seem</h2>
-  <p>While Piracy does have its severe downsides, it still can do good for people. </p>
+  <p>While Piracy does have its severe downsides, it still can do good for people. When used correctly, it can actually make a positive difference in the world.</p>
+  <h3>1. Preservation of Media and Culture</h3>
+  <p>If a company is no longer selling/updating/supporting a media, or is bankrupt or out of business (video game for example), customers who would be willing to purchase a copy of the product are physically unable to. It is totally unreasonable to expect a company to provide support for every single product they have ever made for ever. Piracy can breathe new life into a product or media that has otherwise been killed by the author. Furthermore, piracy allows for archiving of possibly highly influential pieces that have shaped the way we think. Forever blocking it off to only people who have paid for it during a specific time is unfair to those who were unable who were not able to experience it. 
 
+</p><h3>2. Piracy provides a better experience for the consumer</h3>
+<p>  It is a tautology that getting something is better when you can get it for free. And, with companies investing in stronger anti-piracy measures, this only worsens the problem. Modern games use kernel-level anticheat, DRM, and other restrictions. While these are intended to stop pirates, this inevitably hurts paid customers by adding more friction. Often times, pirated content can be modified to get around these restrictions, essentially playing a cat-mouse game, along with being generally easier to transfer from device to device. Seeing this, even some paid customers may consider piracy for their next content. 
+
+</p><h3>3. Piracy as an investment in future customers </h3>
+<p> In many countries, there are people who wish they could listen to certain artists, yet are sanctioned by tarrifs, firewalls, or simple poverty. This happened in Russia, where an artist noticed that many people in Russia would illegally download his songs. Instead of trying to stop this, the artist was able to hold a concert, and since more people were aware of them (through sharing with their friends), what was once might have been a small hobby became something the artist could rely on to support himself. 
+  In fact, many artists aren't concerned about the loss of revenue from piracy, and support it, even if it may cost them a pretty penny. For example, 
   </div>
 
   <div id="menu-item-4">
@@ -114,7 +122,7 @@
   Volume 52, 2017, Pages 188-215, ISSN 0167-7187. <a href="https://doi.org/10.1016/j.ijindorg.2016.12.006">https://doi.org/10.1016/j.ijindorg.2016.12.006</a>.</cite>
   <br><cite>M. D. Smith, “Responding to Piracy: What the evidence shows - Publications - The Technology Policy Institute,” The Technology Policy Institute, Apr. 20, 2021. <a href="https://techpolicyinstitute.org/publications/intellectual-property/copyright-and-piracy/responding-to-piracy-what-the-evidence-shows/">https://techpolicyinstitute.org/publications/intellectual-property/copyright-and-piracy/responding-to-piracy-what-the-evidence-shows/</a></cite>
   <br><cite>C. Doctorow, “‘If buying isn’t owning, piracy isn’t stealing’ - Cory Doctorow - Medium,” Medium, Dec. 09, 2023. [Online]. Available: <a href="https://doctorow.medium.com/https-pluralistic-net-2023-12-08-playstationed-tyler-james-hill-2ba28bfdbefc">https://doctorow.medium.com/https-pluralistic-net-2023-12-08-playstationed-tyler-james-hill-2ba28bfdbefc</a></cite>
-
+  <br><cite>The Consumer Rights Wiki, <a href="https://consumerrights.wiki/Main_Page">https://consumerrights.wiki/Main_Page</a>. Accessed May 2025.</cite>
 
   </div>
   <footer>
