--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </p><h3>3. Piracy as an investment in future customers </h3>
   <p> In many countries, there are people who wish they could listen to certain artists, yet are sanctioned by tarrifs, firewalls, or simple poverty. Piracy, while it might not result in immediate profits, certainly is a great investment for future customers that many artists can use to gain a following. For example, Justin Beiber started off his music career by posting free content on YouTube, and when a publisher (and many fans around the world) noticed his talent, he was able to quickly rise to fame as a talented musician.</p>
   <p> In addition to building careers, piracy, and free online distribution can also help <i>maintain and grow</i>. The classic example of this is the band Radiohead. For their album <i>In Rainbows</i>, they let people pay the price they wanted for their music, whether it was $0, $10, or something in between. While obviously some people never paid, there were some donors who definitely showed they loved the music through donations, whether at the initial download or again after enjoying the music. This shows that forcing payment <b>doesn't always have to be the solution.</b> Radiohead embraced pirates and freedom and in turn, they were able to be successful and heard.</p>
-
+  <img id="radiohead" src="radiohead.jpg">
   </div>
 
   <div id="menu-item-4">
@@ -118,6 +118,7 @@
     <h2>Works Cited</h2>
   <cite><a href="#pirate_pic">Pirates picure</a>, public domain courtesy of wallpaperflare.com. <a href="https://www.wallpaperflare.com/pirates-skull-and-bones-ubisoft-video-games-wallpaper-czgjx">https://www.wallpaperflare.com/pirates-skull-and-bones-ubisoft-video-games-wallpaper-czgjx</a>. Last Accessed May 2025.</cite>
   <br>
+  <cite><a href="radiohead">Radiohead picture</a>, creative commons courtesy of wallpaperflare.com <a href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fc4.wallpaperflare.com%2Fwallpaper%2F719%2F830%2F459%2Fmusic-thom-yorke-radiohead-wallpaper-preview.jpg&f=1&nofb=1&ipt=ff6ec2f95fa2e50ae332eadfa85b86c82f642ae5f1938cb282599fba8947f645">https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fc4.wallpaperflare.com%2Fwallpaper%2F719%2F830%2F459%2Fmusic-thom-yorke-radiohead-wallpaper-preview.jpg&f=1&nofb=1&ipt=ff6ec2f95fa2e50ae332eadfa85b86c82f642ae5f1938cb282599fba8947f645</a>.</cite>
   <cite>D. Johnson, “What is piracy? Here’s what you need to know about digital piracy, and how to avoid stolen digital content,” Business Insider, Aug. 23, 2022. <a href="https://www.businessinsider.com/guides/tech/what-is-piracy">https://www.businessinsider.com/guides/tech/what-is-piracy</a></cite>
   <br>
   <cite>Christian Peukert, Jörg Claussen, Tobias Kretschmer, <i>Piracy and box office movie revenues: Evidence from Megaupload</i>, International Journal of Industrial Organization,
